--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -20,5 +20,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+         // suppress errors for missing 'import React' in files
+        "react/react-in-jsx-scope": "off"
     }
 }
